
=== Version 2.12.5 (KDE Applications 19.08) --- 18 July 2019 ===
+ Enable alarm list columns to be hidden using context menu on list header [KDE Bug 397093]
+ Fix regression introduced in version 2.12.0:
    Show time zone abbreviation in message window if alarm time has non-local time zone.
+ If only one writable archived alarm calendar exists, automatically set it as the default.

=== Version 2.12.4 (KDE Applications 19.04.3) --- 4 July 2019 ===
+ Fix calendar resource dialogue not configuring resource correctly [KDE Bug 407882]
+ Fix calendar resource dialogue creating new resources unusable until restart [KDE Bug 407882]
+ Enable resource after creating with the calendar resource dialogue [KDE Bug 407882]
+ Fix colour and alarm type columns being too wide in alarm list.

=== Version 2.12.3 (KDE Applications 19.04.2) --- 23 May 2019 ===
* Fix calendar configuration dialogue not appearing.
* Fix errors creating calendar resources on first run of KAlarm [KDE Bug 407544]
* Display alarm message windows within current screen in multi-head systems.

=== Version 2.12.2 (KDE Applications 18.08.2) --- 27 September 2018 ===
* Fix Defer button being disabled for recurring alarms [KDE Bug 398658]

=== Version 2.12.1 (KDE Applications 18.08.1) --- 18 August 2018 ===
* Align and right adjust 'Time to' column values in main window [KDE Bug 397130]
* Remove seconds values from Time column (erroneously added in 2.12.0).

=== Version 2.12.0 (KDE Applications 18.08) --- 29 July 2018 ===
* Use KAlarmCal::KADateTime instead of deprecated KDateTime.
* Remove 'clock time' option, in favour of local system time zone.
* Fix times being truncated and showing ellipsis in main window [KDE Bug 365257]
* Fix evaluation of work days.
* Fix reminder-once alarms not being correctly loaded from calendar file.
* Fix some regressions introduced in version 2.11.0, including:
    Make global shortcuts available.
    Default sound file selection dialogue to the system sound files directory.
