@@ -5,6 +5,7 @@ KAlarm Change Log
 + Fix regression introduced in version 2.12.0:
     Show time zone abbreviation in message window if alarm time has non-local time zone.
 + If only one writable archived alarm calendar exists, automatically set it as the default.
++ Don't allow user to create a new resource using same calendar file as an existing resource.
 
 === Version 2.12.4 (KDE Applications 19.04.3) --- 4 July 2019 ===
 + Fix calendar resource dialogue not configuring resource correctly [KDE Bug 407882]
